# solana_waifu_app

./: README.md
back-end/: Anchor.toml
back-end-waifu-contract/: Anchor.toml
back-end-waifu-contract/programs/back-end-waifu-contract/: Cargo.toml
back-end-waifu-contract/programs/back-end-waifu-contract/src/: lib.rs
back-end-waifu-contract/tests/: back-end-waifu-contract.js
back-end/mywaifupic/: Cargo.toml
back-end/mywaifupic/src/: lib.rs
front-end/: package-lock.json
front-end/public/: index.html
front-end/src/: App.css  App.js  idl.json  keypair.json
src/: App.js
